components/plausible/plausible-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible-postgres
  namespace: plausible
spec:
  selector:
    app: plausible-postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
